Fixed a problem where the bottom box would overlap the top box of the home page

--- a/src/components/HomePageContent.module.css
+++ b/src/components/HomePageContent.module.css
@@ -49,7 +49,7 @@
 .bottomBox {
   position: absolute;
   padding-top: 40px;
-  top: 60%;
+  top: 400px;
   width: 100%;
   height: 70%;
 
@@ -101,7 +101,7 @@
   .bottomBox {
     position: absolute;
     padding-top: 40px;
-    top: 60%;
+    top: 400px;
     width: 100%;
     height: 70%;
 
@@ -155,7 +155,7 @@
   .bottomBox {
     position: absolute;
     padding-top: 40px;
-    top: 60%;
+    top: 400px;
     width: 144%;
     height: 70%;
 
